--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background: url(../public/bgImg.jpg);
+    background: url(../bgImg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
